Fri Dec 27 15:03:36 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/ior_corbaloc: Removed.

Fri Dec 27 11:49:22 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

	* tao/CORBALOC_Parser.h: 
	* tao/CORBALOC_Parser.cpp: 
	  Modified the signature of parse_string_assign_helper. We dont
	  have to send the length of original string as an argument.
	  When invoking assign_ke_string, the length of the token needs 
	  to be sent as opposed to the length of the whole address.
          Thanks to Bertin Colpron <BColpron@interstarinc.com>
	  for pointing out.
	
Fri Dec 27 14:57:50 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* examples/Makefile:
	* examples/Makefile.bor: Added ior_corbaloc to the list of
	  directories. 

Fri Dec 27 14:41:44 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* examples/ior_corbaloc: Moved the test from tests/ior_corbaloc to
	  examples. Moving the test to examples directory would help us to
	  run the test in our daily builds.

Fri Dec 27 07:56:31 2002  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_generator.cpp (create_module):

	  Added a line to propagate the prefix of a module to a reopening of
	  that module in another IDL file, overlooked in the changes of

	  Wed Dec 11 18:26:09 2002  Jeff Parsons <j.parsons@vanderbilt.edu>

	  which was causing a reference (in a third IDL file) to a member of 
	  the reopened module to lack the correct prefix, if it had been set. 
	  Thanks to Nanbor Wang <nanbor@cse.wustl.edu> for reporting the 
	  problem.

Fri Dec 27 07:15:34 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* examples/Simple/Simple_Util.h: Somehow missed this in my checkin. 

Thu Dec 26 09:07:21 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* examples/Simple/Simple_Util.h: Added a method to return the
	  client side ORB.
	* examples/Simple/grid/Grid_Client_i.cpp: Hold the Grid_Factory's